Добавлен тест, изменены мелкие недочёты